# cre8Space

./: README.md
ai-kb/: .env-sample  .gitignore  README.md  pyproject.toml
ai-kb/src/app/: config.py  main.py  routes.py
ai-kb/src/app/constants/: __init__.py  supported_file_type.py
ai-kb/src/app/impl/: LoggerImpl.py  __init__.py
ai-kb/src/app/models/: IngestModel.py  QueryModel.py  __init__.py
ai-kb/src/app/router/: rag_operations.py
ai-kb/src/app/services/agent/: __init__.py  categorize_agent.py  rag_agent.py  state.py  tools.py
ai-kb/src/app/services/llm/: base.py  custom_openai_client.py  utils.py
ai-kb/src/app/services/prompt/v1/: caption_generation.py  categorize_text.py  qa.py
ai-kb/src/app/services/vectordb/: qdrant_service.py  utils.py
ai-kb/src/app/utils/: file_operations.py  langchain_utils.py
backend/: .env.sample  .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  mongodb.ts
backend/src/controllers/: addMetada.controller.ts  getContent.controller.ts  incentivize.controller.ts  obfuscation.controller.ts
backend/src/models/: Content.ts  Creator.ts  Incentivization.ts
backend/src/router/: addMetadata.route.ts  getAllContent.route.ts  incentivizeContent.route.ts  obfuscation.route.ts
backend/src/utils/: fetchAggregatorData.ts  getContent.ts  (+4 more)
contracts/: README.md
contracts/content_monitize/: .gitignore  Move.toml  package.json  tsconfig.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx
(+52 files in other folders)
